--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         $(function(){
             $('body').nsAwesomeGallery({
                 images: [
-                    {name: 'Name 1', description: 'Description 1', url: 'images/1.jpg'},
+                    {name: 'Name 1', description: 'Description 1 Description 1 Description 1 Description 1 Description 1 Description 1 Description 1 Description 1', url: 'images/1.jpg'},
                     {name: 'Name 2', description: 'Description 2', url: 'images/2.jpg'},
                     {name: 'Name 3', description: 'Description 3', url: 'images/3.jpg'},
                     {name: 'Name 4', description: 'Description 4', url: 'images/4.jpg'},
